# slap2-volume-alignment

./: .gitignore  README.md  pyproject.toml
docs/: REPO_ORGANIZATION.md
notebooks/: Plot_Morphology.ipynb
notebooks/image_alignment/: ScanImage_Alignment_QC.ipynb
notebooks/image_alignment/SLAP2/: SLAP2_SuperStack_Merge_QC.ipynb
notebooks/image_alignment/ScanImage/: ScanImage_Alignment_QC.ipynb
notebooks/image_utils/: Inspect_tiff_image.ipynb
notebooks/morphology/: Plot_Morphology.ipynb
notebooks/slap2/: SLAP2_SuperStack_Merge_QC.ipynb
notebooks/visualization/: SLAP2_SuperStack_Presentation_Render.ipynb  SLAP2_napari__visualization.ipynb  TwoColor_Hyperstack_Presentation_Render.ipynb
src/slap2_volume_align/: __init__.py  cli.py  save_scanimage_plane_subset.py
src/slap2_volume_align.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/slap2_volume_align/core/: __init__.py  bidirectional.py  registration.py  straightening.py  z_registration.py
src/slap2_volume_align/qc/: __init__.py  scanimage.py
src/slap2_volume_align/readers/: __init__.py  tiff.py
src/slap2_volume_align/sources/: __init__.py
src/slap2_volume_align/sources/scanimage/: __init__.py  metadata.py  pipeline.py  subset.py
src/slap2_volume_align/sources/slap2/: __init__.py  dat_reader.py  geometry.py  merge.py  metadata.py  overlap.py  qc.py  reference_stack.py
src/slap2_volume_align/visualization/: __init__.py
tests/: test_bidirectional.py  test_imports.py  test_slap2_geometry.py  test_z_registration.py
