[project]
name = "slap2-volume-align"
version = "0.1.0"
description = "Alignment and reconstruction of SLAP2 and ScanImage structural volumes"
authors = [{name = "Andrew Shelton"}]
requires-python = ">=3.9"

dependencies = [
    "numpy",
    "scipy",
    "tifffile",
    "scikit-image",
    "pydantic",
    "pyyaml",
    "typer",
    "rich",
    "matplotlib",
]

[project.optional-dependencies]
notebooks = [
    "jupyter",
    "ipykernel",
    "pandas",
]
viewer = [
    "napari",
    "magicgui",
]

[project.scripts]
slap2-align = "slap2_volume_align.cli:app"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
